--- a/instsoli/templates/instsoli/pages/home.html
+++ b/instsoli/templates/instsoli/pages/home.html
@@ -193,7 +193,7 @@
                     <p>Atuamos através de projetos educacionais, capacitação profissional e desenvolvimento comunitário, impactando diretamente a vida de milhares de pessoas.</p>
                 </div>
                 <div class="about-img">
-                    <img src="{% static 'instsoli/images/about.jpg' %}" alt="Equipe do Instituto Solidare">
+                    <img src="{% static 'instsoli/images/criancas.jpg' %}" alt="Equipe do Instituto Solidare">
                 </div>
             </div>
         </section>
@@ -226,7 +226,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="{% static 'instsoli/images/projeto1.jpg' %}" alt="Educação Infantil">
+                        <img src="{% static 'instsoli/images/image.png' %}" alt="Educação Infantil">
                     </div>
                     <div class="project-content">
                         <h3>Educação Infantil</h3>
@@ -236,7 +236,7 @@
                 
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="{% static 'instsoli/images/projeto2.jpg' %}" alt="Capacitação Profissional">
+                        <img src="{% static 'instsoli/images/prog.jpg' %}" alt="Capacitação Profissional">
                     </div>
                     <div class="project-content">
                         <h3>Capacitação Profissional</h3>
@@ -246,7 +246,7 @@
                 
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="{% static 'instsoli/images/projeto3.jpg' %}" alt="Alimentação Solidária">
+                        <img src="{% static 'instsoli/images/alim-soli.jpg' %}" alt="Alimentação Solidária">
                     </div>
                     <div class="project-content">
                         <h3>Alimentação Solidária</h3>
@@ -264,20 +264,20 @@
             <div class="contact-info">
                 <div class="contact-card">
                     <i class='bx bx-envelope'></i>
-                    <h3>Email</h3>
-                    <p>contato@solidare.org</p>
+                    <h3>Instagram</h3>
+                    <p>@institutosolidare</p>
                 </div>
                 
                 <div class="contact-card">
                     <i class='bx bx-phone'></i>
                     <h3>Telefone</h3>
-                    <p>(11) 1234-5678</p>
+                    <p>(81) 3251-4480</p>
                 </div>
                 
                 <div class="contact-card">
                     <i class='bx bx-map'></i>
                     <h3>Endereço</h3>
-                    <p>Rua Solidare, 123 - São Paulo/SP</p>
+                    <p>R. Alcântara, 170 - Coqueiral, Recife - PE</p>
                 </div>
             </div>
         </section>
