ajustes nos portais

--- a/instsoli/templates/instsoli/pages/portal_aluno/portal_aluno.html
+++ b/instsoli/templates/instsoli/pages/portal_aluno/portal_aluno.html
@@ -40,7 +40,14 @@
                 <p>Veja os principais avisos dos professores</p>
                 <a href="{% url "instsoli:avisos_aluno" %}">Acessar</a>
             </div>
-
+            
+            <!-- Card 5 -->
+            <div class="card">
+                <i class='bx bxs-pencil icon'></i>
+                <h3>Solicitações</h3>
+                <p>Realize solicitações na qual deseja</p>
+                <a href="{% url 'instsoli:listar_solicitacoes' %}">Acessar</a>
+            </div>
 
         </section>
     </main>
