--- a/instsoli/templates/instsoli/pages/portal_professor/portal_professor.html
+++ b/instsoli/templates/instsoli/pages/portal_professor/portal_professor.html
@@ -48,6 +48,14 @@
                 <a href="{% url "instsoli:avisos" %}">Acessar</a>
             </div>
 
+            <!-- Card 6 -->
+            <div class="card">
+                <i class='bx bxs-pencil icon'></i>
+                <h3>Solicitações</h3>
+                <p>Veja as principais solicitações feitas pelos alunos</p>
+                <a href="{% url 'instsoli:professor_solicitacoes' %}">Acessar</a>
+            </div>
+
         </section>
     </main>
 
