criando a nova história: material de ensino

--- a/instsoli/templates/instsoli/pages/portal_professor/portal_professor.html
+++ b/instsoli/templates/instsoli/pages/portal_professor/portal_professor.html
@@ -37,7 +37,7 @@
                 <i class='bx bxs-book-alt icon'></i>
                 <h3>Materiais Didáticos</h3>
                 <p>Anexe materiais didáticos</p>
-                <a href="#">Acessar</a>
+                <a href="{% url "instsoli:materiais" %}">Acessar</a>
             </div>
             
             <!-- Card 5 -->
