atualizando o sistema de avisos

--- a/instsoli/templates/instsoli/pages/portal_aluno/portal_aluno.html
+++ b/instsoli/templates/instsoli/pages/portal_aluno/portal_aluno.html
@@ -38,7 +38,7 @@
                 <i class='bx bx-bell icon'></i>
                 <h3>Avisos</h3>
                 <p>Veja os principais avisos dos professores</p>
-                <a href="{% url "instsoli:avisos_aluno" %}">Acessar</a>
+                <a href="{% url "instsoli:avisos" %}">Acessar</a>
             </div>
             
             <!-- Card 5 -->
